[package]
name = "pvg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "fs", "time"] }
url = "2"
time = { version = "0", features = ["formatting"] }
once_cell = "1"
md-5 = "0"
actix-web = "4"
thiserror = "1"
anyhow = "1"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-files = "0"
parking_lot = "0"
aho-corasick = "0"
either = "1"
actix-cors = "0"
serde-aux = "4"
typed-builder = "0"
