[package]
name = "pixiv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2"
time = { version = "0", features = ["formatting"] }
once_cell = "1"
md-5 = "0"
thiserror = "1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-aux = "4"
typed-builder = "0"
tokio = { version = "1", features = ["time"] }
strum = "0.24"
strum_macros = "0.24"

[dependencies.reqwest]
version = "0"
default-features = false
features = ["json", "stream", "rustls-tls"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
pretty_env_logger = "0"
