[package]
name = "pixiv"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2"
time = { version = "0", features = ["formatting"] }
md-5 = "0.10"
thiserror = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-aux = "4"
serde_with = "3"
tokio = { version = "1", features = ["time"] }
strum_macros = "0.27"

[dependencies.reqwest]
version = "0"
default-features = false
features = ["json", "stream", "rustls-tls"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
pretty_env_logger = "0"
