[package]
name = "pvg"
version = "0.1.1"
edition = "2024"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "time",
    "process",
] }
actix-web = "4"
anyhow = { version = "1", features = ["backtrace"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
actix-files = "0.6"
parking_lot = "0.12"
actix-cors = "0.7"
ctrlc = { version = "3", features = ["termination"] }
fs2 = "0.4"
futures = "0"
rayon = { version = "1", optional = true }
image = { version = "0", optional = true }
suffix = "1"
itertools = "0.14"
lru = "0.16"
nix = { version = "0.30", features = ["fs"], optional = true }
pretty_env_logger = { git = "https://github.com/karin0/pretty-env-logger.git" }

pixiv = { path = "../pixiv" }

[build-dependencies]
vergen-gitcl = { version = "1", features = ["build"] }

[features]
io-uring = ["actix-files/experimental-io-uring"]
image = ["dep:image", "dep:rayon"]
rename2 = ["dep:nix"]
