[package]
name = "pvg"
version = "0.1.1"
edition = "2024"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "time",
    "process",
] }
actix-web = "4"
anyhow = { version = "1", features = ["backtrace"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
actix-files = "0.6"
parking_lot = "0.12"
actix-cors = "0.7"
ctrlc = { version = "3", features = ["termination"] }
futures = "0"
rayon = { version = "1", optional = true }
image = { version = "0", optional = true }
suffix = { version = "1", optional = true }
itertools = "0.14"
lru = "0.16"
nix = { version = "0.30", features = ["fs"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
unicode-normalization = "0.1"
lz4 = "1"
string-interner = "0.19"

dhat = { version = "0.3", optional = true }
pretty_env_logger = { git = "https://github.com/karin0/pretty-env-logger.git" }

pixiv = { path = "../pixiv" }

[build-dependencies]
vergen-gitcl = { version = "1", features = ["build"] }

[features]
default = ["sam"]
io-uring = ["actix-files/experimental-io-uring"]
image = ["dep:image", "dep:rayon"]
rename2 = ["dep:nix"]
dhat-heap = ["dep:dhat"]
sam = ["dep:suffix"]
