[package]
name = "pvg"
version = "0.2.0"
authors = ["karin0 <karin0@gmx.com>"]
edition = "2024"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "time",
    "process",
] }
actix-web = "4"
anyhow = { version = "1", features = ["backtrace"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
actix-files = "0.6"
parking_lot = "0.12"
actix-cors = "0.7"
ctrlc = { version = "3", features = ["termination"] }
futures = "0"
itertools = "0.14"
lru = "0.16"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
unicode-normalization = "0.1"
lz4 = "1"
string-interner = "0.19"
fs2 = "0.4"

image = { version = "0", optional = true }
rayon = { version = "1", optional = true }
similar = { version = "2", optional = true }
fixedbitset = { version = "0.5", optional = true }
integer-sqrt = { version = "0.1", optional = true }
bio = { version = "3", optional = true }
bytecount = { version = "0.6", optional = true }
packedvec = { version = "1", optional = true }
nix = { version = "0.30", features = ["fs"], optional = true }
dhat = { version = "0.3", optional = true }

pretty_env_logger = { git = "https://github.com/karin0/pretty-env-logger.git" }
pixiv = { path = "../pixiv" }

[build-dependencies]
vergen = { version = "9", features = ["build", "cargo", "rustc", "si"] }
vergen-gitcl = { version = "1", features = ["build"] }

[features]
default = ["sa-packed", "fm-index"]

rename2 = ["dep:nix"]
io-uring = ["actix-files/experimental-io-uring"]
diff = ["dep:similar"]
search = ["dep:bio", "dep:fixedbitset", "dep:integer-sqrt"]
sa-packed = ["search", "dep:packedvec"]
fm-index = ["search", "dep:bytecount"]
sa-inverted = ["search"]

image = ["dep:image", "dep:rayon"]
dhat-heap = ["dep:dhat"]
sa-bench = ["sa-inverted"]
sa-packed-bench = ["sa-packed"]
fm-bench = ["fm-index"]
